manifest/mwc/registryswap-mwc.yaml
apiVersion: admissionregistration.k8s.io/v1
kind: MutatingWebhookConfiguration
metadata:
  name: registryswap-webhook
  labels:
    app: registryswap
    resource: mutatingwebhookconfiguration
webhooks:
  - name: registryswap.webhook.k8s.acc.io
    clientConfig:
      service:
        name: registryswap
        namespace: registryswap-system
        path: "/"
      caBundle: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSURBekNDQWV1Z0F3SUJBZ0lKQU8zWEQyTmN6SHZmTUEwR0NTcUdTSWIzRFFFQkN3VUFNQmN4RlRBVEJnTlYKQkFNTURHRmtiV2x6YzJsdmJsOWpZVEFnRncweU16QTBNalF3TWpBME1qVmFHQTh5TWprM01ESXdOakF5TURReQpOVm93RnpFVk1CTUdBMVVFQXd3TVlXUnRhWE56YVc5dVgyTmhNSUlCSWpBTkJna3Foa2lHOXcwQkFRRUZBQU9DCkFROEFNSUlCQ2dLQ0FRRUF1OGFjQk95VHlpQXFQbFhldDUyMGJPWXlOVmhuMm1ESWRiN1IvVTFINGNDOG9WWVkKV2VTaENOVVJrbHBZNzZZUFMrUTNiblFyTzZnQ2N3TExXQ0QvclY0a1BZMlpTZ2IweUg5YTVERTlSOW5MZmNOZQp0RG5pZUowSG8y [...]
    rules:
      - operations:
          - CREATE
          - UPDATE
        apiGroups:
          - "*"
        apiVersions:
          - "*"
        resources:
#          - "pods"
          - "deployments"
          - "statefulsets"
          - "daemonsets"
    sideEffects: None
    admissionReviewVersions: ["v1"]
    failurePolicy: Fail
    reinvocationPolicy: IfNeeded
